XNAT-5703 Prevent login box from being shoved down the page on narrow viewports

--- a/src/main/webapp/style/app.css
+++ b/src/main/webapp/style/app.css
@@ -1317,16 +1317,33 @@ body.xnat .chosen-container {
     line-height: 1.3;
     margin: 4em auto;
     padding-bottom: 100px;
-    overflow: auto;
+    display: table-row; /* for IE 9 */
+    vertical-align: top;
+    display: flexbox; /* for IE 10 */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    justify-content: center;
 }
 
 #login_area .message p {
     margin: 0;
 }
 
-#login_welcome {
-    width: 560px;
-    float: left;
+.login-box-container-flex {
+    padding-right: 2em;
+    display: table-cell;
+}
+.login-box-container-fixed {
+    width: 400px;
+    display: table-cell;
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+.forgot-login .login-box-container-fixed {
+    margin: 0 20px;
+    background-color: #f0f0f0;
 }
 
 /*@media screen and (min-width: 1000px) {*/
@@ -1338,28 +1355,15 @@ body.xnat .chosen-container {
 #login_box,
 #register_box {
     background-color: #f0f0f0;
-    display: inline-block;
     line-height: 1.3;
     padding: 0;
-    width: 400px;
 }
 
-#login_box {
-    float: right;
-    margin-right: 20px;
-}
-
-#register_box {
-    float: none;
-}
-
-#login_box div.message,
-#register_box div.message {
+.login-box-container-fixed div.message {
     margin-bottom: 0;
 }
 
-#login_box [type="submit"],
-#register_box [type="submit"] {
+.login-box-container-fixed [type="submit"] {
     font-size: 13px !important;
 }
 
@@ -1370,35 +1374,23 @@ body.xnat .chosen-container {
     padding: 20px;
 }
 
-#login_box_container,
-#register_box_container {
-    display: inline-block;
-    position: relative;
-    float: right;
-    margin-right: 20px;
-    width: 400px;
-}
-
-#login_box_container #login_box,
-#register_box_container #register_box {
+.login-box-container-fixed #login_box,
+.login-box-container-fixed #register_box {
     margin: 0;
 }
 
-#login_box_container > h3,
-#register_box_container > h3 {
+.login-box-container-fixed > h3 {
     height: 26px;
     margin-bottom: 20px;
     line-height: 26px;
     vertical-align: middle;
 }
 
-#login_box_container > h3 > span,
-#register_box_container > h3 > span {
+.login-box-container-fixed > h3 > span {
     float: left;
 }
 
-#login_box_container > h3 > button,
-#register_box_container > h3 > button {
+.login-box-container-fixed > h3 > button {
     float: right;
 }
 
@@ -3716,6 +3708,7 @@ fieldset,
 p.form-submit {
     font-size: 12px !important;
     text-align: right;
+    margin-bottom: 0;
 }
 
 .form-submit input,
